objects/alm_pm2__Sprint__c.object
<CustomObject>
 <fullName>alm_pm2__Sprint__c</fullName>
 <fields>
  <fullName>alm_pm2__End_Date__c</fullName>
  <label>End Date</label>
  <type>Date</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Release__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>Release</label>
  <referenceTo>alm_pm2__Release__c</referenceTo>
  <relationshipLabel>Sprints</relationshipLabel>
  <relationshipName>Sprints</relationshipName>
  <type>Lookup</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Start_Date__c</fullName>
  <label>Start Date</label>
  <type>Date</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Status__c</fullName>
  <label>Status</label>
  <type>Picklist</type>
  <valueSet>
   <valueSetDefinition>
    <value>
     <fullName>Not Started</fullName>
    </value>
    <value>
     <fullName>In Progress</fullName>
    </value>
    <value>
     <fullName>Completed</fullName>
    </value>
   </valueSetDefinition>
  </valueSet>
 </fields>
 <label>Sprint</label>
 <listViews>
  <fullName>alm_pm2__All</fullName>
  <filterScope>Everything</filterScope>
  <label>All</label>
 </listViews>
 <nameField>
  <label>Sprint Name</label>
  <type>Text</type>
 </nameField>
 <pluralLabel>Sprints</pluralLabel>
 <sharingModel>ReadWrite</sharingModel>
 <validationRules>
  <fullName>alm_pm2__Start_and_End_Dates</fullName>
  <active>true</active>
  <errorConditionFormula>alm_pm2__Start_Date__c  &gt;  alm_pm2__End_Date__c</errorConditionFormula>
  <errorMessage>The end date cannot be before the start date.</errorMessage>
 </validationRules>
</CustomObject>